
        * Logon sessions (for examination) is now handled internal. Authentication
          is done once to create the initial session.

        * The form on the exam page is now submitted in the background using AJAX
          request. Enabled by default, but can be disabled in conf/config.inc.

        * Fixes in PDF-generation using HTML doc (error code handling).

Version 1.5.7 (2014-01-21):

        * Fixed UTF-8 encoding of emails sent by the system.

        * Quoted alternatives in single- or multiple choice questions is now 
          properly encoded as option values. The quoted text has to be escaped
          when submitted (as in the example question).

        * Multiple choice alternatives (question and answers) are now displayed 
          as a list on correction page, with correct and wrong answers using
          icons as bullets.

        * Fixed problem with download of scoreboard on Windows (mostly related to
          IE 8 trying to download the PHP script instead of the file content). There 
          still exist a problem with opening CSV-files using Excel.

Version 1.5.6 (2012-03-15):

        * It's now possible to exclude information about correcting person and
          extended statistics like score distribution from the generated PDF
          seen by the student (this feature was added as a security measure by
          request from a teacher).

        * Added proxy script for use with external, unsecured URL's. Use the
          script as: proxy?url=http://www.example.com/xxx

        * Added admin page for exporting casual information on all examinations.

        * It is now possible to update answer scores after an examination has
          been decoded. This function is handled by source/admin/adjust.php and
          is only available for supervisor users.

        * Examinations can be exported from the source/admin/exams.php page by
          supervisor users.
